# diagrams-gi-cairo

./: .gitignore  README.md  ToDo.md  diagrams-gi-cairo.cabal  stack.cmd  stack.yaml
diagrams/src/Diagrams/Backend/: CmdLine.hs
diagrams/src/Diagrams/TwoD/: Attributes.hs
geometry/src/Geometry/: Transform.hs
monoid-extras/src/Data/Monoid/SemiDirectProduct/: #Strict.hs#
src/Diagrams/Backend/: Cairo.hs
test/: Spec.hs
